--- a/src/app/components/tools/navbar/navbar.component.html
+++ b/src/app/components/tools/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 <nav class="navbar navbar-expand-lg navbar-light">
-  <a class="navbar-brand text-light" href="#">Ballo Company Group</a>
+  <a class="navbar-brand text-light" href="#"></a>
   <button class="navbar-toggler  bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
