--- a/src/app/layouts/admin-layout/admin-layout.component.html
+++ b/src/app/layouts/admin-layout/admin-layout.component.html
@@ -3,7 +3,7 @@
 <div class="sidebar" #sideBar>
   <div class="logo-details" routerLink="/" style="cursor: pointer;">
     <i class='bx bxs-bank'></i>
-    <span class="logo_name">BCG admin</span>
+    <span class="logo_name"></span>
   </div>
   <ul class="nav-links">
     <li *ngIf="user.role_id == 1">
